--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/.idea/.gitignore
+/.idea/Free-fall-simulator.iml
